--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="robotdanceparty.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
+
+Hi, we're Plunger!
     </body>
 </html>
