--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <script src="robotdanceparty.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
 
-Hi, we're Plunger!
+Hi, we're Plunger! Have this dancing robot for now!
+<br>
+<br>
+<img src="robot01.gif">
     </body>
 </html>
