--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 Hi, we're Plunger! Have this dancing robot for now!
 <br>
 <br>
-<img src="robot01.gif">
+<img src="assets/robot01.gif">
     </body>
 </html>
