Included jaws.js into project.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <body>
         <script src="out/goog/base.js" type="text/javascript"></script>
+        <script type="text/javascript" src="jaws.js"> </script>
         <script src="robotdanceparty.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
+        <script>robotdanceparty.core.main(); </script>
 
 Hi, we're Plunger! Have this dancing robot for now!
 <br>
