using jaws example droid for now

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@ Hi, we're Plunger! Have this dancing robot for now!
 <br>
 <br>
 <img src="assets/robot01.gif">
+
+        <canvas width=500 height=300></canvas>
+        FPS: <span id="fps"></span>
+
     </body>
 </html>
