dancing robot is controllable!

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
         <script>robotdanceparty.core.main(); </script>
 
-Hi, we're Plunger! Have this dancing robot for now!
+Hi, we're Plunger! Have this dancing robot for now! (Control with arrow keys)
 <br>
 <br>
-<img src="assets/robot01.gif">
 
         <canvas width=500 height=300></canvas>
         FPS: <span id="fps"></span>
