--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <body>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script type="text/javascript" src="jaws.js"> </script>
+        <script type="text/javascript" src="howler.js"> </script>
+        <script type="text/javascript" src="music.js"> </script>
         <script src="robotdanceparty.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
         <script>robotdanceparty.core.main(); </script>
@@ -9,9 +11,23 @@
 Hi, we're Plunger! Have this dancing robot for now! (Control with arrow keys)
 <br>
 <br>
-
-        <canvas width=500 height=300></canvas>
-        <div id="robot_select" style="position: fixed; left: 600; top: 0">
+        <div style="position:fixed; left:0">
+            <form>
+                <select id="song" onClick="playBackgroundMusic(document.getElementById('song').selectedIndex)">
+                    <option value="Song1">Song1</option>
+                    <option value="Song2">Song2</option>
+                </select>
+                <br>
+                <select name="tempo">
+                    <option value="slow">sloww</option>
+                    <option value="medium">medioium</option>
+                    <option value="fast">farst</option>
+                </select>
+            </form>
+            <form></form>
+        </div>
+        <canvas width=500 height=300 style="position:fixed; left:100"></canvas>
+        <div id="robot_select" style="position: fixed; left: 700; top: 0">
             <img src="" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot1, 'robot1')">
             <br>
