--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Hi, we're Plunger! Have this dancing robot for now! (Control with arrow keys)
             </form>
             <form></form>
         </div>
+        <div id="help" style="position:fixed; left: 100; top:400">Select a robot from the right side and place them onto to dance floor.</div>
         <canvas width=500 height=300 style="position:fixed; left:100"></canvas>
         <div id="robot_select" style="position: fixed; left: 700; top: 0">
             <img src="" style="width: 100; height: 100;"
@@ -37,7 +38,7 @@ Hi, we're Plunger! Have this dancing robot for now! (Control with arrow keys)
             <img src="" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot3, 'robot3')">
         </div>
-        FPS: <span id="fps"></span>
+
 
     </body>
 </html>
