--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="#50002D" color="#e09db7">
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script type="text/javascript" src="jaws.js"> </script>
         <script type="text/javascript" src="howler.js"> </script>
@@ -10,23 +10,24 @@
 
         <div style="position:fixed; left:0">
             <form>
-                <select id="song">
+                <select id="song" onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">
                     <option value="Song1">Song1</option>
                     <option value="Song2">Song2</option>
                 </select>
                 <br>
-                <select id="tempo">
+                <select id="tempo" onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">
                     <option value="fast">fast</option>
                     <option value="medium">medium</option>
                     <option value="slow">slow</option>
                 </select>
             </form>
-            <button onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">Play</button>
-            <button onClick="stopBackgroundMusic()">Stop</button>
+            <button onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">Play Music</button>
+            <br>
+            <button onClick="stopBackgroundMusic()">Stop Music</button>
         </div>
-        <div id="help" style="position:fixed; left: 100; top:480"></div>
+        <div id="help" style="color:white; position:fixed; left: 100; top:480"></div>
         <canvas width=500 height=464 style="position:fixed; left:100"></canvas>
-        <div id="robot_select" style="position: fixed; left: 700; top: 0">
+        <div id="robot_select" style="position: fixed; left: 610; top: 50">
             <img src="" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot1, 'robot1')">
             <br>
