--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body bgcolor="#50002D" color="#e09db7">
+
+        <div style="position:fixed; left:100; color:white;font-size: 40;">robot_dance_party.gif</div>
+
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script type="text/javascript" src="jaws.js"> </script>
         <script type="text/javascript" src="howler.js"> </script>
@@ -8,7 +11,7 @@
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
         <script>robotdanceparty.core.main(); </script>
 
-        <div style="position:fixed; left:0">
+        <div style="position:fixed; left:0; top:125">
             <form>
                 <select id="song" onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">
                     <option value="Song1">Song1</option>
@@ -25,17 +28,22 @@
             <br>
             <button onClick="stopBackgroundMusic()">Stop Music</button>
         </div>
-        <div id="help" style="color:white; position:fixed; left: 100; top:480"></div>
-        <canvas width=500 height=464 style="position:fixed; left:100"></canvas>
-        <div id="robot_select" style="position: fixed; left: 610; top: 50">
-            <img src="" style="width: 100; height: 100;"
+        <div id="help" style="color:white; position:fixed; left: 100; top:555"></div>
+        <canvas width=500 height=464 style="position:fixed; left:100; top:75"></canvas>
+        <div id="robot_select" style="position: fixed; left: 610; top: 125">
+            <img src="assets/robot1_select.gif" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot1, 'robot1')">
             <br>
-            <img src="" style="width: 100; height: 100;"
+            <img src="assets/robot2_select.gif" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot2, 'robot2')">
             <br>
-            <img src="" style="width: 100; height: 100;"
+            <img src="assets/robot3_select.gif" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot3, 'robot3')">
+            <br>
+
+        </div>
+        <div style="color:white; position:fixed; left:620; top:475"><button >Export to .gif</button>
+            <br>(coming soon)
         </div>
 
 
