--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <button onClick="stopBackgroundMusic()">Stop Music</button>
         </div>
         <div id="help" style="color:white; position:fixed; left: 100; top:555"></div>
+        <div style="color:white; position:fixed; left: 100; top:600">Plunger Games (c) 2014</div>
         <canvas width=500 height=464 style="position:fixed; left:100; top:75"></canvas>
         <div id="robot_select" style="position: fixed; left: 610; top: 125">
             <img src="assets/robot1_select.gif" style="width: 100; height: 100;"
