--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <body bgcolor="#50002D" color="#e09db7">
 
-        <div style="position:fixed; left:100; color:white;font-size: 40;">robot_dance_party.gif</div>
+        <a href="https://clojurecup.com/?#/apps/robotdanceparty" target="_blank"><img src="assets/vote-for-us.jpg" width="154" height="96"></a>
+
+        <div style="position:fixed; left: 150; color:white;font-size: 40;top: 20">robot_dance_party.gif</div>
 
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script type="text/javascript" src="jaws.js"> </script>
@@ -11,7 +13,7 @@
         <script type="text/javascript">goog.require("robotdanceparty.core");</script>
         <script>robotdanceparty.core.main(); </script>
 
-        <div style="position:fixed; left:0; top:125">
+        <div style="position:fixed; left:0; top:150">
             <form>
                 <select id="song" onClick="playBackgroundMusic(document.getElementById('song').selectedIndex,document.getElementById('tempo').selectedIndex)">
                     <option value="Song1">Song1</option>
@@ -28,10 +30,10 @@
             <br>
             <button onClick="stopBackgroundMusic()">Stop Music</button>
         </div>
-        <div id="help" style="color:white; position:fixed; left: 100; top:555"></div>
-        <div style="color:white; position:fixed; left: 100; top:600">Plunger Games (c) 2014</div>
-        <canvas width=500 height=464 style="position:fixed; left:100; top:75"></canvas>
-        <div id="robot_select" style="position: fixed; left: 610; top: 125">
+        <div id="help" style="color:white; position:fixed; left: 100; top:580"></div>
+        <div style="color:white; position:fixed; left: 100; top:625">Plunger Games (c) 2014</div>
+        <canvas width=500 height=464 style="position:fixed; left:100; top:100"></canvas>
+        <div id="robot_select" style="position: fixed; left: 610; top: 150">
             <img src="assets/robot1_select.gif" style="width: 100; height: 100;"
                  onClick="robotdanceparty.core.activate_hand(robotdanceparty.core.robot1, 'robot1')">
             <br>
@@ -43,7 +45,7 @@
             <br>
 
         </div>
-        <div style="color:white; position:fixed; left:620; top:475"><button >Export to .gif</button>
+        <div style="color:white; position:fixed; left:620; top:500"><button >Export to .gif</button>
             <br>(coming soon)
         </div>
 
